Fixed spacing between elements on buttons

--- a/static/sass/_button-overrides.scss
+++ b/static/sass/_button-overrides.scss
@@ -8,6 +8,11 @@
     background-image: url('#{$assets-path}61d83c7e-icon-github.svg');
   }
 
+  //propose to vanilla when two buttons are next to each other
+  [class^="p-button"] + [class^="p-button"]:not(span) {
+        margin-right: $sph-inter;
+  }
+
   // new button style for dark strip
   // TODO: propose as new pattern (or amendment?) to vanilla
   .p-strip--accent {
